--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
   <title>Contact | MetalDrug</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
+  <body class="bg-gray-950 text-gray-200 font-mono">
 <header class="p-6 text-center border-b border-gray-800">
     <div class="flex justify-center items-center mb-4">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 400" class="w-64 h-auto">
